# cpcontrol

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  example_config.json  example_config2.json
cmake/: defines.cmake  libmodbus.cmake  platform.cmake
docs/: catchpenny_regmap.xlsx  example_config.json  example_message.json
src/: CMakeLists.txt  catchpenny.cpp  catchpenny.hpp  config.hpp  cp_utils.hpp  device.cpp  device.hpp  device_comm.cpp  device_comm.hpp  enerman.cpp  enerman.hpp  error_tracker.cpp  error_tracker.hpp  mqtt_port.cpp  mqtt_port.hpp  sandbox.cpp
tests/: CMakeLists.txt  modbusrtu_test.cpp  modbustcp_test.cpp  mqtt_test.cpp  sandbox.cpp
