cmake_minimum_required(VERSION 3.12)
find_package(PahoMqttCpp REQUIRED)
message(STATUS "echo ${PAHO_CPP_LIB}")
add_executable(modbustcp_test modbustcp_test.cpp)
add_executable(modbusrtu_test modbusrtu_test.cpp)
add_executable(sandbox_app sandbox.cpp)
add_executable(mqtt_test mqtt_test.cpp)

target_link_libraries(sandbox_app PUBLIC cpcontrol ${MODBUSPP_LIBRARIES})
target_link_libraries(modbustcp_test PUBLIC cpcontrol ${MODBUSPP_LIBRARIES})
target_link_libraries(modbusrtu_test PUBLIC cpcontrol ${MODBUSPP_LIBRARIES})
target_link_libraries(mqtt_test PahoMqttCpp::paho-mqttpp3-static)
